--- a/package.json
+++ b/package.json
@@ -68,5 +68,15 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "dotenv",
+          "firebase"
+        ]
+      }
+    }
+  }
 }
