--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 14.4.0",
-    "appVersionSource": "remote"
+    "appVersionSource": "local" // Changed from "remote"
   },
   "build": {
     "development": {
