--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-firebase/app": "^21.6.2",
     "@react-native-firebase/auth": "^21.6.2",
-    "@react-native-firebase/messaging": "^21.6.2",
+    "@react-native-firebase/messaging": "^21.7.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "babel-preset-expo": "^12.0.5",
     "dotenv": "^16.4.7",
     "expo": "~52.0.24",
+    "expo-background-fetch": "~13.0.4",
     "expo-build-properties": "^0.13.1",
     "expo-dev-client": "~5.0.8",
     "expo-device": "~7.0.1",
@@ -39,23 +40,22 @@
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-task-manager": "~12.0.4",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.1",
-    "react-native-maps": "1.18.0",
-    "expo-task-manager": "~12.0.4",
-    "expo-background-fetch": "~13.0.4"
+    "react-native-webview": "^13.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
