--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "install": "^0.13.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
