Added --input-type=module for version-update.js

--- a/.github/workflows/eas-build-release.yml
+++ b/.github/workflows/eas-build-release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Update Version (Production)
         if: github.ref == 'refs/heads/main'
-        run: node scripts/version-update.js
+        run: node --input-type=module scripts/version-update.js
 
       - name: Set CI/CD Versions
         run: |
