Added eas verbose logging & build logging output.

--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -31,10 +31,13 @@ jobs:
       - name: Install EAS CLI
         run: npm install -g eas-cli@latest
 
-      - name: Start EAS Build
+      - name: Start EAS Build (With Logs)
         id: build
         run: |
-          BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json)
+          echo "Starting EAS build..."
+
+          # Start the build and capture the BUILD_ID
+          BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json --verbose)
           echo "EAS build response: $BUILD_JSON"
 
           BUILD_ID=$(echo "$BUILD_JSON" | jq -r '.[0].id' 2>/dev/null)
@@ -43,8 +46,14 @@ jobs:
             exit 1
           fi
 
+          echo "EAS Build started with ID: $BUILD_ID"
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_ENV
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_OUTPUT
+
+          # Stream real-time logs for the build
+          echo "Streaming build logs..."
+          npx eas build:logs --build-id $BUILD_ID
+
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
