--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -47,10 +47,7 @@ jobs:
             exit 1
           fi
 
-          BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json 2>&1)
-          echo "EAS build response: $BUILD_JSON"
-
-          BUILD_ID=$(echo "$BUILD_JSON" | jq -r '.[0].id' 2>/dev/null)
+          BUILD_ID=$(npx eas build -p android --profile production --non-interactive --json | jq -r '.[0].id')
           if [[ -z "$BUILD_ID" || "$BUILD_ID" == "null" ]]; then
             echo "Error: Failed to retrieve BUILD_ID!"
             exit 1
