--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -105,7 +105,7 @@ jobs:
             
             echo "Current Build Status: $BUILD_STATUS"
 
-            if [[ "$BUILD_STATUS" == "finished" ]]; then
+            if [[ "$BUILD_STATUS" == "FINISHED" ]]; then
               APK_URL=$(echo "$BUILD_STATUS_JSON" | jq -r '.artifacts.buildUrl' 2>/dev/null)
               
               if [[ -z "$APK_URL" || "$APK_URL" == "null" ]]; then
