--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
+    "prebuild": "node scripts/setupBatteryOptimization.js && node scripts/setupScreenRecording.js",
+    "android": "npm run prebuild && expo run:android",
+    "eas-build-preinstall": "node scripts/setupBatteryOptimization.js && node scripts/setupScreenRecording.js",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
@@ -28,12 +30,15 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.24",
     "expo-background-fetch": "~13.0.4",
+    "expo-battery": "~9.0.2",
     "expo-build-properties": "^0.13.1",
+    "expo-camera": "~16.0.14",
     "expo-dev-client": "~5.0.8",
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
     "expo-location": "^18.0.5",
+    "expo-media-library": "~17.0.5",
     "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.19",
@@ -42,10 +47,13 @@
     "expo-task-manager": "~12.0.4",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "fs-extra": "^11.3.0",
     "nativewind": "^4.1.23",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
+    "react-native-console-view": "^0.0.21",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
