--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,8 +91,8 @@ android {
         applicationId 'com.digitalnomad91.codebuilderadmin'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.1.0"
+        versionCode 9
+        versionName "9.0.0"
     }
     signingConfigs {
         debug {
@@ -101,39 +101,20 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-      release {
-            // The path to your keystore file (adjust if needed):
-            storeFile file('../../keystore.jks')
-
-            // Hardcode your passwords/alias (NOT recommended for production),
-            // or see "Using gradle.properties" below for a more secure approach.
-            storePassword "YOUR_KEYSTORE_PASSWORD"
-            keyAlias "YOUR_KEY_ALIAS"
-            keyPassword "YOUR_KEY_PASSWORD"
-        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
-                release {
-            // Use the "release" signing config here
-            signingConfig signingConfigs.release
-
+        release {
+            // Caution! In production, you need to generate your own keystore file.
+            // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.debug
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
-            minifyEnabled (findProperty('android.enableProguardInReleaseBuilds')?.toBoolean() ?: false)
+            minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             crunchPngs (findProperty('android.enablePngCrunchInReleaseBuilds')?.toBoolean() ?: true)
         }
-        // release {
-        //     // Caution! In production, you need to generate your own keystore file.
-        //     // see https://reactnative.dev/docs/signed-apk-android.
-        //     signingConfig signingConfigs.debug
-        //     shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
-        //     minifyEnabled enableProguardInReleaseBuilds
-        //     proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-        //     crunchPngs (findProperty('android.enablePngCrunchInReleaseBuilds')?.toBoolean() ?: true)
-        // }
     }
     packagingOptions {
         jniLibs {
