Fixed babel.js to cjs. Added camera types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,11 @@
   ],
   "exclude": [
     "node_modules",
-    "babel.config.js",
+    "babel.config.cjs",
     "metro.config.js"
+  ],
+  "types": [
+    "@types/expo__camera"
   ],
   "extends": "expo/tsconfig.base"
 }
