--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -78,6 +78,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq curl
 
+      - name: Install Project Dependencies (Including dotenv)
+        run: npm ci
+
       - name: Verify Project Files # Added verification step
         run: |
           echo "Current directory contents:"
