--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "prebuild": "node scripts/setupBatteryOptimization.js && node scripts/setupScreenRecording.js",
+    "prebuild": "node scripts/setupBatteryOptimization.js",
     "android": "npm run prebuild && expo run:android",
-    "eas-build-preinstall": "node scripts/setupBatteryOptimization.js && node scripts/setupScreenRecording.js",
+    "eas-build-preinstall": "node scripts/setupBatteryOptimization.js",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
